--- a/posts/2017-07-27.md
+++ b/posts/2017-07-27.md
@@ -4,7 +4,7 @@ In this post we are going to talk about something that lies at the core of most 
 
 Are you ready for excitement? Let's talk about managing memory. 
 
-This is probably the moment where you sigh, tricked, as if this were some "Seven Hadoop performance secrets Oracle doesn't want you to know" post. I certainly remember back when I couldn't imagine anything less exciting, especially since "memory management" was almost always the reason my otherwise well-considered program went slow as goats. 
+This is probably the moment where you sigh, tricked, as if this were some "Seven Hadoop performance secrets Oracle doesn't want you to know" post. I certainly remember back when I couldn't imagine anything less exciting, especially since "memory management" was almost always the reason my otherwise well-considered program went slow as sap. 
 
 More recently, I've taken an interest in understand how computers work and whether I can bend them to my will. Can I make the computer do the thing I'm pretty sure it should be able to do, independent of whichever screw-head wrote the layer of code I have to write against. "Managed languages" and Rust are on opposite ends of the spectrum here, with the former building up lots of infrastructure to "help" but which often unintentionally "sucks". The latter, Rust, does a pretty solid job of getting out of your way, but of course provides some default behavior when you need it. 
 
@@ -12,7 +12,7 @@ It's going to be pretty good default behavior, but we are going to try something
 
 ### Some motivation
 
-Imagine you are tasked with doing some big data computation stuff, and instead of just needing to do `grep` or `wordcount` or maybe even `graph_processing`, you need to work with real data types. Let's take an example I stole from Erik Tryzelaar (who's patrilineal heritage is clearly "galactic overlord"), who in turn borrowed (conquered?) it from CloudFlare's Go serialization benchmark.
+Imagine you are tasked with doing some big data computation stuff, and instead of just needing to do `grep` or `wordcount` or maybe even `graph_processing`, you need to work with real data types. Let's take [an example](https://github.com/frankmcsherry/abomonation/blob/master/benches/serde.rs#L403-L435) I stole from Erik Tryzelaar (who's patrilineal heritage is clearly "galactic overlord"), who in turn borrowed (conquered?) it from a [CloudFlare Go serialization benchmark](https://github.com/cloudflare/goser/tree/master/src).
 
 ```rust
 impl Log {
@@ -66,39 +66,39 @@ Tracing garbage collectors are accurate (if you can reach something, best to kee
 
 Awkwardly, most big data computations are defined by .. having lots of data. And not just briefly having lots of data. Any interesting stream processing system works by maintaining a large amount of historical state that it regularly consults and updates based on the data moving past it. Such a system does not regularly flush out its state, unless it has run out of memory and is now crashing (my current theory: "fault-tolerance" in systems built on managed languages is just a super-primitive form of garbage collection; prove me wrong).
 
-When we build Naiad many years back, while we got our system up and running surprisingly quickly (I was surprised, anyhow), we then spent forever-and-a-half optimizing the performance, and that was almost all about changing our system and programs so that the garbage collector wouldn't have a fit. For example, if you used `String` anywhere in your program, meaning we maintain a large indexed collection of `String`s for you, the C# garbage collector would vanish for seconds at a time (once: 39 seconds) trying to recall just which of the gigabytes of allocations were still live. 
+When we build Naiad many years back, while we got our system up and running surprisingly quickly (I was surprised, anyhow), we then spent forever-and-a-half optimizing the performance, and there was a great deal about changing our system and programs so that the garbage collector wouldn't have a fit. For example, if you used `String` anywhere in your program, meaning we maintain a large indexed collection of `String`s for you, the C# garbage collector would vanish for seconds at a time (once: 39 seconds) trying to recall just which of the gigabytes of allocations were still live. 
 
-Of course, garbage collectors are always getting better, is something you often hear from people who make garbage collectors for a living. Another thing we heard (from the C# performance team) was "if your program's allocations aren't 90% garbage, you might want to rethink your program". Some rethinking happened; they were right about that.
+Of course, garbage collectors are always getting better, is something you often hear from people who make garbage collectors for a living. Another thing we heard (from the C# performance team) was "if your program's allocations aren't 90% garbage, you might want to rethink your program". Some rethinking happened; they were right about that.*
 
-Several MSR colleagues did that rethinking and ended up with a HotOS paper about a system they called [Broom](https://www.usenix.org/system/files/conference/hotos15/hotos15-paper-gog.pdf), whose position was that system-wide tracing garbage collection was just going to be an issue in big data systems, and perhaps there were (specific) better approaches to use. They proposed using [*regions*](https://en.wikipedia.org/wiki/Region-based_memory_management), something that we will get back to a bit later in the post.
+Anyhow, I don't know which GC is currently the best, and it may be that in the past few years they have discovered secret performance technology that makes them wonderful, but the current trend is that folks on GC'd platforms (the JVM mostly) are moving their data off of the managed heap, and handling their memory allocations manually. We won't talk about them any more.
 
-I don't know which GC is currently the best, and it may be that in the past few years they have discovered secret performance technology that makes them wonderful, but the current trend is that folks on GC'd platforms (the JVM mostly) are moving their data off of the managed heap, and handling their memory allocations manually. We won't talk about them any more.
+*: Several MSR colleagues did that rethinking and ended up with a HotOS paper about a system they called [Broom](https://www.usenix.org/system/files/conference/hotos15/hotos15-paper-gog.pdf), whose position was that system-wide tracing garbage collection was just going to be an issue in big data systems, and perhaps there were (specific) better approaches to use. They proposed using [*regions*](https://en.wikipedia.org/wiki/Region-based_memory_management), something that we will get back to a bit later in the post. If you'd like to take a break and read the paper, great! Our goal here is to do the things they recommend, but without building a new system.
 
 ### Ownership and big data
 
 Rust has a different approach to memory management, in that one of its defining features is that it provides automatic memory management without a tracing garbage collector. Automatic memory management just means that you don't need to manually allocate and free things, but as we will see it doesn't mean "all the properties of a tracing garbage collector", for better or for worse. 
 
-If you are familiar with smart pointers in C++, it's roughly the same thing going on here. All bindings (of data to a variable or field) are uniquely owned, in the sense that whenever that binding goes away (e.g. when overwritten, when the containing scope ends, etc) we know that there are no other owners of the data, and we can (and should!) clean up it and any of its resources. Like, right away! We don't have to wait to scan the heap or whatever it is the tracing garbage collectors do.
+In Rust, all bindings (of data to a variable or field) are uniquely owned, in the sense that whenever that binding goes away (e.g. when overwritten, when the containing scope ends, etc) we know that there are no other owners of the data, and we can (and should!) clean up it and any of its resources. Like, right away! We don't have to wait to scan the heap or whatever it is the tracing garbage collectors do.
 
-Consider our `log` type up above. When we construct a new one (which is what the `new()` method does), we are going to allocate up some space for the ten strings it holds. We'll use it for a while, and we might even mutate some of the strinsg, grow them a bit that sort of thing. But, at some point we use it for the last time, and subsequently discard our handle to it. At this moment we can safely go in and de-allocate whatever is pointed at by those ten pointers that were initially allocated for our strings.
+Consider our `log` type up above. When we construct a new one (which is what the `Log::new()` method does), we are going to allocate up some space for the ten strings it holds. We'll use it for a while, and we might even mutate some of the strings, maybe grow them a bit, that sort of thing. But, at some point we use the log entry for the last time, and discard our handle to it. At this moment we can safely go in and de-allocate whatever is pointed at by those ten pointers that were initially allocated for our strings.
 
-There are a bunch of issues with this approach, most prominetnly that if we want a copy of the data for some reason, maybe to hand to another bit of code without giving up our copy, we would need to clone the data. That means another ten new allocations, assuming we stick to the discipline that whenever you discard a `Log` you should de-allocate what memory it owns.
+There are a bunch of issues with this approach, most prominently that if we want a copy of the data for some reason, maybe to hand to another bit of code without giving up our copy, we would need to clone the data. That means another ten new allocations, assuming we stick to the discipline that whenever you discard a `Log` you should de-allocate what memory it owns.
 
 Rust has various solutions for this problem, including reference counting (`Rc` and `Arc`) which allow shared ownership, as well as "borrowing" (the `&` and `&mut` sigils) which is Rust's way of saying "you can see / use my copy, but give it back when done, rather than de-allocating it, please". 
 
 Borrowing is the sort of thing that stresses out many folks new to Rust, mostly (I believe) because they haven't had to think about it before. If you aren't familiar, it boils down to grabbing a raw pointer and convincing the compiler that the referrent will be stable for at least as long as your pointer is around. The "convincing" part is what is stressful, but if you get it right then your program can share out references to the existing allocation and not continually re-/de-allocate memory as it does.
 
-The main restriction that borrowing introduces, insisting on the stability of the original data (it should not be mutated, moved, de-allocated), has seemed to rarely be a problem for me in big data computations. Although the data is big, and while the set of data are always changing, each individual datum is not itself changing. If you were running `wordcount`, you would expect a stream of well-defined words as inputs, not `String`s whose contents change each time you look at them. Although your core logic will need to do more interesting mutations, the *data plane* of dataflow systems seems well accommodated by borrowing.
+The main restriction that borrowing introduces, insisting on the stability of the original data (it should not be mutated, moved, de-allocated), has seemed to rarely be a problem for me in big data computations. Although the data is big, and while the set of data are always changing, each individual datum is not itself changing. If you were running `wordcount`, you would expect a stream of well-defined words as inputs, not `String`s whose contents change each time you look at them. Although your core logic will need to do more interesting mutations, the *data plane* of dataflow systems has seemed to me to be well accommodated by borrowing.
 
 ### Regions and big data
 
-Regions are a third way of doing memory management, and it turns out it is one we've been doing all along.
+Regions are a third way of doing memory management, and while you may not have heard of them, you've probably used regions before.
 
 [Region based memory management](https://en.wikipedia.org/wiki/Region-based_memory_management) works from the premise that some collection of allocations are going to be around for the same amount of time, and if so it makes sense to locate them all in the same small pile of memory, so that when we are done we can just drop that whole allocation, no questions asked. In the case of `Log` up above, we could stash all ten of the allocations in the same place, using just one allocation, and then do just one de-allocation when we are finished.
 
 This is very similar to another thing that computers do: [serialization](https://en.wikipedia.org/wiki/Serialization). When one computer needs to send data to another computer, it is forced to bundle up the data (and whatever that data can reach), put it all in a contiguous hunk of memory as raw bytes (not pointers), and send those bytes to its friend. Its friend receives the bytes, and re-interprets them as meaningful data using whatever agreed upon schema it shares with its friend.
 
-Serialization is a lot like user-mode regions. The serialized data live in one allocation and can be created, cloned, and dropped with no more than one allocation (and often fewer, if we plan to serialize a batch of data).
+Serialization is a lot like user-mode regions. The serialized data live in one allocation and can be created, cloned, and dropped with no more than one allocation (and often fewer, if we plan to serialize a batch of data together).
 
 Serialization gets a bit of a bad rap, because in a lot of systems (e.g. Java and C# for sure) it is dog slow. Also, people often serialize to and from text based formats like [JSON](https://en.wikipedia.org/wiki/JSON). Don't let their miserable performance turn you off from serialization. It can be faster than using the native representations and operations.
 
@@ -119,55 +119,53 @@ From [Abomonation](https://github.com/frankmcsherry/abomonation)'s [`serde` benc
 
     Echidnatron% 
 
-Serializing a `Log` to existing memory is about five times faster than allocating a new one. And most of this time is actually reading out of the `Log`; if you want to clone a serialized `Log` to another allocation and then deserialize it, it takes about 23ns.
+Serializing a `Log` to existing memory is about five times faster than allocating a new one.
 
-How could this possibly be? Don't we need to end up with the same thing that `new()` gives us, and if so how could bypassing the language's prefered mechanisms possibly be better? The answer lies in borrowing, and our implicit (now explicit) ability to work only with borrowed data.
+How could this possibly be? Don't we need to end up with the same thing that `new()` gives us, and if so how could bypassing the language's prefered mechanisms possibly be better? The answer lies in borrowing, and our implicit (now explicit, sorry) willingness to work only with borrowed data.
 
-Restricting ourselves to work only with borrowed data imposes limitations. We essentially get read-only access to the data, which means we can't take our `Log` and rewrite the `hostname` field. And if we want an owned copy of the `hostname` field to stash somewhere else we will need to clone it. But, the system wasn't planning on handing out ownership of record fields anyhow; we were going to have to clone things.
+Restricting ourselves to work only with borrowed data imposes limitations. We essentially get read-only access to the data, which means we can't take our `Log` and rewrite the `hostname` field. And if we want an owned copy of the `hostname` field to stash somewhere else we will need to clone it. But, the system wasn't planning on handing out ownership of the record fields anyhow; we were going to have to clone things if we wanted that. But this way, we don't have to clone things if we don't need an owned version.
 
-Let's imagine for now that we are comfortable with using borrowed data, or at least defering any allocations until we actually need owned data. What does a serialization library like [Abomonation](https://github.com/frankmcsherry/abomonation) do under the hood? Let's look at the `encode` and `decode` method signatures first:
+Let's imagine for now that we are comfortable with using borrowed data, or at least defering `clone` and any allocations until we actually need owned data. What does a serialization library like [Abomonation](https://github.com/frankmcsherry/abomonation) do under the hood? Let's look at the `encode` and `decode` method signatures first:
 
 ```rust
 unsafe fn encode<T: Abomonation>(typed: &T, bytes: &mut Vec<u8>);
 unsafe fn decode<T: Abomonation>(bytes: &mut [u8]) -> Option<(&T, &mut [u8])>;
 ```
 
-These two methods are foremost `unsafe`. They muck around with internals that Rust doesn't normally want you touching. They may have undefined behavior, because the Rust folks are still working out what constitutes undefined behavior (at the moment it includes `memcpy` of structs with padding bytes, which Abomonation does).
+These two methods are foremost `unsafe`. They muck around with internals that Rust doesn't normally want you touching. They may have undefined behavior, because the Rust folks are still working out what constitutes undefined behavior. At the moment Rust's UB includes `memcpy` of structs with padding bytes, which Abomonation does. I'm guessing this won't eventually be UB, but there are other, more horrible things going on here.
 
-From its signature, `encode` takes a reference to some type `T` as well as a writeable reference to a vector of bytes. These are the source data and destination vector, respectively. Once done, `bytes` will be extended by a bunch of bytes representing `typed`.
+From its signature, `encode` takes a reference to some type `T` as well as a writeable reference to a vector of bytes. These are the source data and destination vector, respectively. Once done, `bytes` will be extended by a bunch of bytes representing `typed`. To a first approximation, `encode` calls `memcpy` on all the data it can reach from `typed`, following pointers and everything.
 
-From its signature, `decode` is a complicated beast. Its only argument is `bytes`, a writeable reference to a slice of bytes. This means we can change the bytes themselves, but we can't change the underlying allocation itself. There is an additional input in the type parameter `T` which tells us what type we are hoping to find, without suppling an instance of `T` as an argument. Instead, what we get as output is either `None` (if decoding failed) or `Some` wrapped around a pair of reference to a `T` (the `&T`) and whatever bytes remain having burned some on the decoding.
+From its signature, `decode` is a complicated beast. Its only argument is `bytes`, a writeable reference to a slice of bytes. This means we can change the bytes themselves, but we can't change the underlying allocation itself. There is an additional input in the type parameter `T` which tells us what type we are hoping to find, without suppling an instance of `T` as an argument. Instead, what we get as output is either `None` (if decoding failed) or `Some` wrapped around a pair of reference to a `T` (the `&T`) and whatever bytes remain having burned some on the decoding. To a first approximation `decode` just fixes up the pointers to be addresses internal to the allocation.
 
-Both `encode` and `decode` do the thing you would hope they do: respectively they copy the relevant bytes in, and then fix the pointers up internally so you can just pretend the bytes are actually a `T`. It is essentially a `memcpy` on the in-memory representation of a `T`, chasing down pointers to known types like `String` and `Vec` and `Box`. Some types are problematic (e.g. `Rc`) and we just don't implement the `Abomonation` trait for these types.
+We will defer judgment about the propriety of this scheme to some future post.
 
-So, regions. Fast serialization is roughly equivalent to user-mode regions allocation, and spares us a great deal of overhead that comes with using the default allocation strategies. We feel a bit sad that we weren't allocating directly into the region, and we will need to through how we fall back to owned data when we need to inter-op with code that expects it (worst case: do the allocations we just skipped, but only as needed).
+So, regions. Fast serialization is roughly equivalent to user-mode regions allocation, and spares us a great deal of overhead that comes with using the default allocation strategies. We feel a bit sad that we weren't allocating directly into the region, and we will need to through how we fall back to owned data when we need to inter-op with code that expects it (worst case: do the allocations we just skipped, but only as needed; better case coming up).
 
 But let's look a bit more at serialization, and Abomonation specifically, to see what sorts of things we can easily do.
 
-### Serialization
+### Serialization performance
 
-This is partly me kicking the tires, and partly talking through the sorts of things you should be able to do with serialized data. I'm writing this without having run most of the benchmarks, so it may be that not everything turns out to be a great idea.
+This is partly me kicking the tires, and partly talking through the sorts of things you should be able to do with serialized data. I'm writing this without having run (or even written) most of the benchmarks, so it may be that not everything turns out to be a great idea. Let's find out!
 
 We've already talked a bit about what numbers you could get with a type like `Log` when you compare `new()` with whatever `encode()` and `decode()` do. Let's take a peek at the benchmarking code and see.
 
 #### Allocating and de-allocating
 
-The first benchmark repeatedly allocates new log entries.
+The first benchmark repeatedly allocates new log entries. Rust has a handy built-in benchmarking infrastructure I used for all of this. You write code like so:
 
 ```rust
 #[bench]
 fn log_new(b: &mut Bencher) {
-    b.iter(|| {
-        Log::new()
-    });
+    b.iter(|| Log::new());
 }
 ```
 
-This code repeatedly creates a new `Log` entry. It also repeatedly de-allocates the log entry, which is a cost someone is going to have to pay eventually. 
+and Rust's benchmarking harness will run this a lot and produce output like so:
 
     test log_new           ... bench:         371 ns/iter (+/- 39)
 
-There are ten strings in each `Log`, which means ten allocations and de-allocations. There are also going to be ten-ish calls to `memcpy` to load up the contents of the string, and probably another for the struct itself (which is 288 bytes, even without the allocations).
+Apparently it takes roughly 371 nanoseconds to allocate and de-allocate (don't forget the second!) a `Log`. There are ten strings in each `Log`, which means ten allocations and de-allocations. There are also going to be ten-ish calls to `memcpy` to load up the contents of each of the strings, and probably another call for the struct itself (which is 288 bytes, even without the allocations).
 
 This isn't any better if we try and use `clone()` to get a copy of an existing `Log`:
 
@@ -175,9 +173,7 @@ This isn't any better if we try and use `clone()` to get a copy of an existing `
 #[bench]
 fn log_clone(b: &mut Bencher) {
 	let log = Log::new();
-    b.iter(|| {
-		log.clone()
-    });
+    b.iter(|| log.clone());
 }
 ```
 
@@ -219,10 +215,14 @@ fn log_decode(b: &mut Bencher) {
 }
 ```
 
+The `test::black_box` is how we indicate to the benchmarking infrastructure that we are not allowed to optimize out the argument. We did this in the above examples by returning the result of the work, but the results here have borrowed lifetimes in them, and cannot be returned.
+
 These two methods do roughly the minimal amount of work possible, and move pretty briskly:
 
     test log_decode        ... bench:           8 ns/iter (+/- 0) = 65500 MB/s
     test log_encode        ... bench:          77 ns/iter (+/- 55) = 6805 MB/s
+
+The numbers are slightly different from up above because I ran things again. Pretty exciting news.
 
 #### Encoding and decoding with allocations
 
@@ -242,13 +242,15 @@ fn log_decode_clone(b: &mut Bencher) {
 }
 ```
 
-This chats with the allocator to get a new `Vec<u8>`, but it only does so once, and for the appropriate amount of memory for a full encoded `Log`. Additionally, when it copies memory it does so once, rather than eleven distinct times from disjoint regions.
+This chats with the allocator to get a new `Vec<u8>`, but it only does so once, and for the appropriate amount of memory for a full encoded `Log`. Additionally, when it copies memory it does so once, rather than eleven distinct times from possibly disjoint regions.
+
+    test log_encode_clone           ... bench:          51 ns/iter (+/- 8) = 10274 MB/s
+
+Of course, since the `bytes` arrays we allocate are untyped (or, are all `Vec<u8>` typed), we shouldn't be allocating and de-allocating, we should just recycle them.
 
 #### Inspecting the data
 
-One sweet advantage of region allocation is *locality*: all of the data we need are co-located, and we don't need to chase down various pointers to distant regions of memory. Let's check out how that looks.
-
-First, what if we just want to look at our decoded data and confirm that it equals what we started from?
+What if we just want to look at our decoded data and confirm that it equals what we started from?
 
 ```rust
 #[bench]
@@ -289,6 +291,12 @@ For the sake of experiment, we could mock this up as deserializing each element 
     test log_shuffle_serialized_opt ... bench: 112,091,319 ns/iter (+/- 3,612,521) = 4674 MB/s
 
 This is still about twice as slow as just moving the 288 bytes of the struct around, which makes sense as the serialized representation is 524 bytes, about twice as long. However, if we aren't able to take ownership of the original allocations, the serialized forms are substantially faster than invoking `clone()` and working with any non-region type of allocator.
+
+#### Comments 
+
+I'm pretty keen to try out serialized representations for internal differential dataflow data structures. Right now, even just using simple types like `String`, you see a lot of time spent chatting with the allocator, getting new allocations and releasing old allocations. When you do something complicated like merge a few GB of immutable owned data, you end up doing all sorts of clones, and you'd really rather not.
+
+Plus, and more on this at a future point, if everything is just a `Vec<u8>` you can blat it out to disk really fast. Or memory map it back in, if something goes horribly wrong (e.g. perhaps you are running a fault tolerance experiment and chose to manually kill your timely workers).
 
 ### Recycling
 
