--- a/posts/2017-07-27.md
+++ b/posts/2017-07-27.md
@@ -12,7 +12,7 @@ It's going to be pretty good default behavior, but we are going to try something
 
 ### Some motivation
 
-Imagine you are tasked with doing some big data computation stuff, and instead of just needing to do `grep` or `wordcount` or maybe even `graph_processing`, you need to work with real data types. Let's take [an example](https://github.com/frankmcsherry/abomonation/blob/master/benches/serde.rs#L403-L435) I stole from Erik Tryzelaar (who's patrilineal heritage is clearly "galactic overlord"), who in turn borrowed (conquered?) it from a [CloudFlare Go serialization benchmark](https://github.com/cloudflare/goser/tree/master/src).
+Imagine you are tasked with doing some big data computation stuff, and instead of just needing to do `grep` or `wordcount` or maybe even `graph_processing`, you need to work with real data types. Let's take [an example](https://github.com/frankmcsherry/abomonation/blob/master/benches/serde.rs#L403-L435) I stole from Erik Tryzelaar (whose patrilineal heritage is clearly "galactic overlord"), who in turn borrowed (conquered?) it from a [CloudFlare Go serialization benchmark](https://github.com/cloudflare/goser/tree/master/src).
 
 ```rust
 impl Log {
