--- a/posts/2017-07-24.md
+++ b/posts/2017-07-24.md
@@ -278,3 +278,37 @@ What is going on is a "virtuous cycle". Imagine you are feeding the workers at a
 Another way to look at it is that the latency-throughput function has a steeper derivative than the pictures might make you think (note that the y-axis is in log-scale). If we force twice as much load on the system, the response time can get much much worse. Similarly, introducing a second worker that picks up half of the slack can in principle recover as much as you would lose going in the other direction.
 
 One conclusion from this is that while latency is a great metric to think about, it doesn't capture the rate at which we do computation, just how good we are at ordering the computation we do so that we can confirm results as soon as possible. By adding a second core we haven't made any computation run five times faster, we've just given the system the breathing room to respond five times as often.
+
+### Addendum: Scaling (2017-07-29)
+
+I sneaked onto a computer with many cores, and came back with some more scaling information for latency-throughput trade-offs. The goal here was to see whether the trend seen above on my laptop, of cores increasing the responsiveness of the system more dramatically than one might expect, continues, and for how long it continues.
+
+So we do the same computation, 10 million node, 50 million edge degree computation and maintenance, increasing the number of workers from 1 up through 16, at each power of two. We take a reading with each power of ten batch size, producing:
+
+![scaling](https://github.com/frankmcsherry/blog/blob/master/assets/latency/scaling.png)
+
+The curves are unlabeled, but they are probably the ones you think they are. From left to right the worker counts increase, generally increasing the throughput of the system at the expense of the minimal achievable latency.
+
+I find this plot a bit more striking than the one for my laptop. Two threads really does look like you are getting twice the throughput, four threads looks like maybe four times the throughput, and .. then .. the scaling seems to break down a bit, doesn't it. I think there is a good explanation for that (not exactly a system issue; more of a program issue) and I'll try and explain that in future addenderata.
+
+For the moment though, we see many situations where increasing the core count can substantially improve the latency for a fixed throughput. Taking 400,000 elements per second as a target, which for one core requires a quarter of a second, we can achieve
+
+|               |      latency | throughput |
+|--------------:|-------------:|-----------:|
+|    one worker | 0.244437870s |  409101.91 |
+|   two workers | 0.004326536s |  462263.54 |
+|  four workers | 0.000701516s |  570193.62 |
+| eight workers | 0.000182272s |  438904.32 |
+
+Or we could aim for around one million elements per second, which one worker doesn't manage, and get readings like
+
+|                 |      latency | throughput |
+|----------------:|-------------:|-----------:|
+|     two workers | 2.179154755s |  917787.04 |
+|    four workers | 0.043897407s |  911215.55 |
+|   eight workers | 0.007832616s | 1021370.17 |
+| sixteen workers | 0.001645368s |  972427.02 |
+
+From all of this we can somewhat conclude that adding resources has the ability to dramatically improve the responsiveness of your differential dataflow computation. We shouldn't conclude things about other systems, as this could just be because differential dataflow slows down a lot to give high throughput and has lots of ground to regain.
+
+There remains the mystery of why we can't seem to get past 2.4 million updates per second, which I think I'll be able to explain. I have a theory, and once I get some data it should make a good story!
