--- a/posts/2017-07-24.md
+++ b/posts/2017-07-24.md
@@ -312,3 +312,15 @@ Or we could aim for around one million elements per second, which one worker doe
 From all of this we can somewhat conclude that adding resources has the ability to dramatically improve the responsiveness of your differential dataflow computation. We shouldn't conclude things about other systems, as this could just be because differential dataflow slows down a lot to give high throughput and has lots of ground to regain.
 
 There remains the mystery of why we can't seem to get past 2.4 million updates per second, which I think I'll be able to explain. I have a theory, and once I get some data it should make a good story!
+
+### Addendum: Scaling (2017-07-29)
+
+I've got another picture for you, which gets at the secret behind why the scaling seemed to break down. It is roughly the same experiment as above, with a minor change. See if you can spot it:
+
+    cargo run --release --example degrees -- 10000000 500000000 <batch> -w <workers>
+
+When we use this command line instead of the ones up above, we get latency-throughput curves that look like this:
+
+![scaling2](https://github.com/frankmcsherry/blog/blob/master/assets/latency/scaling2.png)
+
+Notice that the x-axis, throughput, goes out *lots* farther than up above. We max out at 12.5 million elements per second. It's a pretty small change, but one that greatly affects how easy it is to compute the anwer.
