--- a/posts/2017-07-24.md
+++ b/posts/2017-07-24.md
@@ -323,4 +323,4 @@ When we use this command line instead of the ones up above, we get latency-throu
 
 ![scaling2](https://github.com/frankmcsherry/blog/blob/master/assets/latency/scaling2.png)
 
-Notice that the x-axis, throughput, goes out *lots* farther than up above. We max out at 12.5 million elements per second. It's a pretty small change, but one that greatly affects how easy it is to compute the anwer.
+Notice that the x-axis, throughput, goes out *lots* farther than up above. We max out at 12.5 million elements per second. It's a pretty small change, but one that greatly affects how easy it is to compute the answer.
