--- a/posts/2017-01-26.md
+++ b/posts/2017-01-26.md
@@ -78,7 +78,7 @@ What if I told you that `f(x) = exp(x)` is sandwiched between `f(x) = x` and `f(
 
 	x < exp(x) <= x' + 1
 
-where `x'` goes to zero as `x` goes to zero. For example, maybe `x'` happens to be something like `exp(x) - 1`. 
+where `x'` goes to zero as `x` goes to zero? For example, maybe `x'` happens to be something like `exp(x) - 1`.
 
 What's your take? Would you agree `f(x) = exp(x)` is indeed sandwiched between `f(x) = x` and `f(x) = x + 1`, and that exponential functions are "equivalent to straight lines"?
 
@@ -94,7 +94,7 @@ I'm going to spoil the surprise and show you the relationship the authors prove:
 
 where the `<=` is `=` in several cases (when the domain or range are finite). This meets the requirements that the `eps'` and `del` both go to zero as `eps` goes to zero; it turns out that `eps'` is even zero to start with.
 
-It turns out that (0, eps)-DP is just [statistical distance](https://en.wikipedia.org/wiki/Total_variation_distance_of_probability_measures) which in this case you could think of as differential privacy with additive `eps` rather than multiplicative.  The additive bound is *much weaker* than the multiplicative bound, because rare events stay rare with the multiplicative bound and they do not with the additive bound.
+It turns out that (`0`, `eps`)-DP is just [statistical distance](https://en.wikipedia.org/wiki/Total_variation_distance_of_probability_measures) which in this case you could think of as differential privacy with additive `eps` rather than multiplicative.  The additive bound is *much weaker* than the multiplicative bound, because rare events stay rare with the multiplicative bound and they do not with the additive bound.
 
 The statistical distance is a pretty well understood concept; it's used all the time in cryptography for example, and statisticians understand it quite well too. So why did we use multiplicative `eps` rather than additive `eps` when we did the differential privacy definition? Likewise with (`eps`, `del`)-differential privacy, why did we use two parameters rather than just lumping them together in `del`?
 
