--- a/posts/2017-01-26.md
+++ b/posts/2017-01-26.md
@@ -6,7 +6,7 @@ The definitions are *not* equivalent. At least, not in any valuable sense. Their
 
 The paper doesn't say anything patently false (well, some things), so what do we conclude about a not-obviously-incorrect technical result like this?
 
-This paper lead me to have a good think about why we have privacy definitions. As in, what is the good thing that a quantitative definition (like differential privacy) does for us in a technical setting? And, what makes one definition better, worse, or at least different from another? 
+This paper led me to have a good think about why we have privacy definitions. As in, what is the good thing that a quantitative definition (like differential privacy) does for us in a technical setting? And, what makes one definition better, worse, or at least different from another? 
 
 I hope that by the end of the post we will have a better sense of this than I did, at least, when I started reading the paper.
 
